<resources>
    <string name="app_name">My Application</string>
    <string name="login">Entrar</string>
    <string name="btn_register">Criar conta</string>
    <string name="btn_rgu_cancel">Cancelar</string>
    <string name="btn_rg_create">Cirar conta</string>
    <string name="btn_rgi_create">Criar Anuncio</string>
    <string name="amigos">Amigos</string>
    <string name="logout">Logout</string>
    <string name="homeact">Home</string>
    <string name="login_">Login</string>
    <string name="cadanuncio">Cadastrar Anúncio</string>
    <string name="brn_chat">Enviar</string>
    <string name="mensagem">Digite a mensagem</string>
    <string name="mensagens">Mensagens</string>
    <string name="registro">Cadastrar Usuário</string>
    <string name="chat">Chat</string>
    <string name="menu_perfil">Perfil</string>
    <string name="btn_pf_edit">Editar Informações</string>
    <string name="btn_edp_create">Salvar Alterações</string>
    <string name="peril_act">Perfil</string>
    <string name="edt_perfil_act">Editar Perfil</string>
    <string name="btn_pf_logout">Logout</string>
    <string name="btn_delete_conta">Excluir conta</string>
    <string name="btn_edit_im_create" />
    <string name="Editaranuncio">Editar Anúncio</string>
    <string name="Anuncio">Anúncio</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_mapa">Mapa</string>
</resources>